# ExprAutodiff

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
design/: design.md
design/model/: a.py
include/: IR.h  IRFunctor.h  IRMutator.h  IRPrinter.h  IRVisitor.h  arith.h  autodiff.h  codegen_C.h  debug.h  genIR.h  metaInfo.h  simplify.h  type.h  typechecker.h  utils.h
language-project/: test.f
language-project/parser/: Makefile  auto  auto.bison  genIR.cc  genIR.h  readme.md  test.f  util.c  util.h
parser/: CMakeLists.txt  auto.bison  auto.flex  auto.tab.c  auto.tab.h  genIR.cc  globals.h  globals_.h  lex.yy.c  test.f
parser/test/: CMakeLists.txt  test.cc  test.f
project1/: CMakeLists.txt  run.cc  run.h
project1/cases/: case10.json  case9.json
project1/clean/: clean.cc
src/: IR.cc  IRFunctor.cc  IRMutator.cc  IRPrinter.cc  IRVisitor.cc  arith.cc  autodiff.cc  codegen_C.cc  simplify.cc  typechecker.cc  utils.cc
test/: CMakeLists.txt  conv2d.cc  demo-conv2d.cc  demo-gemm.cc  demo-pair-gemm.cc  demo-type-failing.cc  gemm_new.cc  generate_gemm_c.cc  grad_conv2d.cc  grad_gemm.cc  test_ir_functor.cc  test_simplify.cc  test_utils.cc  type_conv2d.cc  type_conv2d_fail.cc
test/demo-inputs/: demo-conv2d.in  demo-gemm.in  demo-pair-gemm.in  demo-type-failing.in
